Fix: visibility initial style

--- a/app/theme/app.variables.scss
+++ b/app/theme/app.variables.scss
@@ -113,9 +113,9 @@ $colors: (
 
 .bus-stop-marker
 {
-  visibility: none !important;
+  visibility: hidden !important;
 }
 .leaflet-label
 {
-  visibility: none !important;
+  visibility: hidden !important;
 }
